first commit to feature2

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,6 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mtgdeckbuilder
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Webstroid89!
 
 spring.jpa.hibernate.ddl-auto=update
